# comp_club

./: CMakeLists.txt  README.md  run  task.docx
README/: README.md
include/: comp_club.hpp  input_check.hpp
input_data/: test_file_2.txt  test_file_3.txt  test_file_4.txt
src/: comp_club.cpp  input_check.cpp  main.cpp
test_files/: test_file.txt  test_file_3.txt  test_file_4.txt  test_file_5.txt
testing/: CMakeLists.txt  t_event_handler.txt  testing.cpp
testing/test_files_for_handling_events/: handle_cl_enter.txt  handle_cl_is_waiting.txt  handle_cl_quit.txt  handle_cl_take_table.txt
